--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ file(GLOB_RECURSE ASSETS RELATIVE ${PROJECT_SOURCE_DIR} "res/*")
 foreach(ASSET ${ASSETS})
 add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_LIST_DIR}/${ASSET} ${CMAKE_CURRENT_BINARY_DIR}/${ASSET}
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_LIST_DIR}/${ASSET} $<TARGET_FILE_DIR:${PROJECT_NAME}>/${ASSET}
 )
 endforeach()
 #add_dependencies(${PROJECT_NAME} copy_assets)
